add pagination review

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -31,6 +31,22 @@
         android:label="fragment_movie_detail"
         tools:layout="@layout/fragment_movie_detail">
 
+        <action
+            android:id="@+id/reviewAction"
+            app:destination="@id/reviewsFragment" />
+        <argument
+            android:name="movieId"
+            android:defaultValue="0"
+            app:argType="integer" />
+
+    </fragment>
+
+    <fragment
+        android:id="@+id/reviewsFragment"
+        android:name="com.asad.themoviedb.presentation.reviews.ReviewsFragment"
+        android:label="fragment_review"
+        tools:layout="@layout/fragment_reviews">
+
         <argument
             android:name="movieId"
             android:defaultValue="0"
