--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -58,31 +58,26 @@
             app:layout_constraintTop_toBottomOf="@+id/iv_backdrop"
             tools:text="Movie Title" />
 
-        <LinearLayout
-            android:id="@+id/ratingContainer"
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/iv_rating"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_marginEnd="4dp"
+            android:tint="@color/star_color"
+            app:layout_constraintStart_toStartOf="@+id/tv_title"
+            app:layout_constraintTop_toBottomOf="@+id/tv_title"
+            app:srcCompat="@drawable/ic_star_filled" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_rating"
+            style="@style/App.Text.Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:gravity="center"
-            android:orientation="horizontal"
-            app:layout_constraintStart_toStartOf="@+id/tv_title"
-            app:layout_constraintTop_toBottomOf="@+id/tv_title">
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:layout_marginEnd="4dp"
-                android:tint="@color/star_color"
-                app:srcCompat="@drawable/ic_star_filled" />
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tv_rating"
-                style="@style/App.Text.Medium"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="8.1" />
-
-        </LinearLayout>
+            app:layout_constraintBottom_toBottomOf="@id/iv_rating"
+            app:layout_constraintStart_toEndOf="@id/iv_rating"
+            app:layout_constraintTop_toTopOf="@id/iv_rating"
+            tools:text="8.1" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_duration"
@@ -90,10 +85,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintStart_toEndOf="@+id/ratingContainer"
-            app:layout_constraintTop_toBottomOf="@+id/tv_title"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_rating"
+            app:layout_constraintStart_toEndOf="@+id/tv_rating"
+            app:layout_constraintTop_toTopOf="@id/tv_rating"
             tools:text="132 min" />
+
+        <androidx.constraintlayout.widget.Barrier
+            android:id="@+id/barrier"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:barrierDirection="bottom"
+            app:constraint_referenced_ids="iv_rating,iv_poster" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvGenre"
@@ -104,7 +106,7 @@
             android:layout_marginEnd="12dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/iv_poster" />
+            app:layout_constraintTop_toBottomOf="@+id/barrier" />
 
         <TextView
             android:id="@+id/tv_summary"
@@ -137,18 +139,32 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_summary"
             tools:text="Trailer" />
 
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_trailer"
             style="@style/App.RecyclerView.Movies"
             android:layout_width="0dp"
             android:layout_height="200dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_trailer"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            tools:orientation="horizontal"
-            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_trailer"
             tools:itemCount="4"
-            tools:listitem="@layout/item_trailer" />
+            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/item_trailer"
+            tools:orientation="horizontal" />
+
+        <TextView
+            android:id="@+id/tv_see_reviews"
+            style="@style/App.Subtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginBottom="16dp"
+            android:text="SEE ALL USER REVIEWS"
+            android:textColor="@color/blue_200"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/rv_trailer" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
