--- a/app/src/main/res/drawable/bg_rounded_blue.xml
+++ b/app/src/main/res/drawable/bg_rounded_blue.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@android:color/transparent" />
-    <corners android:radius="4dp" />
+    <solid android:color="@color/blue_200" />
+    <corners android:radius="12dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/light_gray" />
+        android:color="@color/blue_200" />
 </shape>
