--- a/app/src/main/res/layout/item_genre_main.xml
+++ b/app/src/main/res/layout/item_genre_main.xml
@@ -7,7 +7,7 @@
 
     <TextView
         android:id="@+id/tv_genre"
-        style="@style/App.Text.Small"
+        style="@style/App.Text.Medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_rounded_transparent"
